# flowrust

./: Cargo.toml  README.md
examples/: sample_journey.json
output/: process_instance_0005e5dc-c9d9-49f6-a9d8-2881223cfacb.json  process_instance_38ac7bec-7ee3-4f76-b759-0b8133b29059.json  process_instance_5d52bf8e-1a92-4afd-8671-3e17a2621d30.json  workbaskets.json
src/: main.rs
src/engine/: mod.rs  process_definition.rs  state_machine.rs  workbasket.rs
src/utils/: errors.rs  logger.rs  mod.rs
